crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__error_snapshots__error_invalid_diag_test_type.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stderr
---
error: invalid value 'nonexistent_type' for '[TEST_TYPE]'
  [possible values: motor, encoder, usb, thermal, all]

For more information, try '--help'.
