crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__error_snapshots__error_missing_device_subcommand.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stderr
---
Device management commands

Usage: wheelctl device [OPTIONS] <COMMAND>

Commands:
  list       List all connected devices
  status     Show device status and telemetry
  calibrate  Calibrate device (center, DOR, pedals)
  reset      Reset device to safe state
  help       Print this message or the help of the given subcommand(s)

Options:
      --json        Output in JSON format for machine parsing
  -v, --verbose...  Verbose logging
  -h, --help        Print help
