crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__error_snapshots__error_missing_game_subcommand.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stderr
---
Game integration commands

Usage: wheelctl game [OPTIONS] <COMMAND>

Commands:
  list       List supported games
  configure  Configure game for telemetry
  status     Show game status
  test       Test telemetry connection
  help       Print this message or the help of the given subcommand(s)

Options:
      --json        Output in JSON format for machine parsing
  -v, --verbose...  Verbose logging
  -h, --help        Print help
