crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__error_snapshots__error_missing_telemetry_subcommand.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stderr
---
Telemetry probe and capture commands

Usage: wheelctl telemetry [OPTIONS] <COMMAND>

Commands:
  probe    Probe telemetry transport for a game
  capture  Capture raw UDP telemetry packets to a binary file
  help     Print this message or the help of the given subcommand(s)

Options:
      --json        Output in JSON format for machine parsing
  -v, --verbose...  Verbose logging
  -h, --help        Print help
